--- a/htdocs/css/browser.css
+++ b/htdocs/css/browser.css
@@ -4,7 +4,7 @@
 #prefs .buttons { margin-top: -1.6em }
 #prefs .choice { margin-top: -0.6em }
 
-#legend { clear: right; }
+#file-legend { clear: right; }
 
 /* Browser */
 h1 { margin: 0; padding: 0 0 .5em }
