--- a/templates/revisionlog.html
+++ b/templates/revisionlog.html
@@ -66,7 +66,7 @@
       </form>
 
       <div class="diff">
-        <div id="legend">
+        <div class="legend" id="file-legend">
           <h3>Legend:</h3>
           <dl>
             <dt class="add"></dt><dd>Added</dd>
