--- a/templates/changeset.html
+++ b/templates/changeset.html
@@ -153,8 +153,8 @@
         </dd>
       </dl>
 
-      <div class="diff" py:if="has_diffs">
-        <div class="legend" id="diff-legend">
+      <div class="diff">
+        <div class="legend" id="diff-legend" py:if="has_diffs">
           <h3>Legend:</h3>
           <dl>
             <dt class="unmod"></dt><dd>Unmodified</dd>
