--- a/templates/macros.html
+++ b/templates/macros.html
@@ -128,9 +128,16 @@
   <py:def function="preview_file(preview)">
     ${preview.rendered}
     <py:choose>
-      <p py:when="preview.max_file_size_reached">
+      <p py:when="not preview.rendered">
         <strong>HTML preview not available</strong>,
-        since the file size exceeds $preview.max_file_size bytes.
+        <py:choose>
+          <py:when test="preview.max_file_size_reached">
+            since the file size exceeds $preview.max_file_size bytes.
+          </py:when>
+          <py:otherwise>
+            since no preview renderer could handle it.
+          </py:otherwise>
+        </py:choose>
         Try <a href="$preview.raw_href">downloading</a> the file instead.
       </p>
       <py:when test="preview.errors">
