--- a/templates/attachment.html
+++ b/templates/attachment.html
@@ -13,10 +13,11 @@
   <body>
     <div id="ctxtnav" class="nav"></div>
 
-    <div py:choose="mode" id="content" class="attachment">
-      <!--! TODO: parent.name -> context.parent.name -->
+    <div py:choose="mode" id="content" class="attachment"
+         py:with="parent_name = context.parent.name();
+                  parent_href = context.parent.resource_href()">
       <py:when test="'new'">
-        <h1>Add Attachment to <a href="${context.parent.resource_href()}">$parent.name</a></h1>
+        <h1>Add Attachment to <a href="$parent_href">$parent_name</a></h1>
         <form id="attachment" method="post" enctype="multipart/form-data" action="">
           <div class="field">
             <label>File:<br /><input type="file" name="attachment" /></label>
@@ -43,7 +44,7 @@
           </fieldset>
           <div class="buttons">
             <input type="hidden" name="action" value="new" />
-            <input type="hidden" name="type" value="$context.parent.realm" />
+            <input type="hidden" name="realm" value="$context.parent.realm" />
             <input type="hidden" name="id" value="$context.parent.id" />
             <input type="submit" value="Add attachment" />
             <input type="submit" name="cancel" value="Cancel" />
@@ -52,7 +53,7 @@
       </py:when>
 
       <py:when test="'delete'">
-        <h1><a href="${context.parent.resource_href()}">$parent.name</a>: $attachment.filename</h1>
+        <h1><a href="$parent_href">$parent_name</a>: $attachment.filename</h1>
         <p><strong>Are you sure you want to delete this attachment?</strong><br />
           This is an irreversible operation.</p>
         <div class="buttons">
@@ -67,12 +68,12 @@
       </py:when>
 
       <py:when test="'list'">
-        <h1><a href="${context.parent.resource_href()}">$parent.name</a></h1>
-        ${list_of_attachments(context.parent, attachments, href.attachment(context.parent.realm, context.parent.id))}
+        <h1><a href="$parent_href">$parent_name</a></h1>
+        ${list_of_attachments(context.parent, attachments, context.resource_href())}
       </py:when>
 
       <py:otherwise> <!--! 'render' mode -->
-        <h1><a href="${context.parent.resource_href()}">$parent.name</a>: $attachment.filename</h1>
+        <h1><a href="$parent_href">$parent_name</a>: $attachment.filename</h1>
         <table id="info" summary="Description">
           <tbody>
             <tr>
